fix(css): dark mode

--- a/src/App.global.css
+++ b/src/App.global.css
@@ -23,7 +23,7 @@
   }
 
   a {
-    @apply underline text-green-900;
+    @apply underline;
   }
 
   a:hover {
